--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      crossorigin="anonymous"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      rel="stylesheet"
+    />
+
+    <link
+        rel="stylesheet"
+        href="https://use.fontawesome.com/3b7fb1f2e6.css"
+    />
   </head>
   <body>
     <noscript>
